--- a/markup/index.html
+++ b/markup/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-  <meta charset='UTF-8'>
+  <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <title>Title</title>
+  <link href="style.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="prefetch" href="font/ArialBD.woff2" as="font" crossorigin="anonymous">
+  <title>Информация о словаре</title>
 </head>
 <body>
 
-<div id='app'>
-  <div class='container'>
-    <div class='row'>
-      <div class='col-12 col-md-6'><img class='img-fluid' src='../src/images/onboarding_background.jpg' alt='Обложка словаря'></div>
-      <div class='col-12 col-md-6 text-center'>
-        <div>
+<div id="app">
+  <div class="container">
+    <header class="navbar navbar-expand-md navbar-light bg-light">
+      <nav class="container-xxl flex-wrap flex-md-nowrap">
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
+            <li class="nav-item col-6 col-md-auto menu-item menu-item--active">
+              <a class="nav-link p-2 active" href="#" title="О словаре">Введение</a>
+            </li>
+            <li class="nav-item col-6 col-md-auto menu-item ">
+              <a class="nav-link p-2" href="dictionary.html" aria-current="page" title="К словарю">Словарь</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <div class="row">
+      <div class="col-12 col-md-6"><img class="img-fluid" src="../src/images/onboarding_background.jpg" alt="Обложка словаря"></div>
+      <div class="col-12 col-md-6 text-center">
+        <div class="w-100 h-80">
           <ul class="nav nav-tabs">
-            <li class='nav-item'>
+            <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Предисловие</a>
             </li>
             <li class="nav-item">
@@ -22,17 +38,17 @@
             </li>
           </ul>
 
-          <div class='tab-content'>
-            <div class='tab-pane active'>
-              <img class='img-fluid' src='../src/images/about_text.jpg' alt='Предисловие'>
+          <div class="tab-content">
+            <div class="tab-pane active">
+              <img class="img-fluid" src="../src/images/about_text.jpg" alt="Предисловие">
             </div>
-            <img class='img-fluid' src='../src/images/onboarding_text.jpg' alt='Как использовать'></div>
           </div>
+      </div>
+        <div class="text-center mx-auto my-5">
+          <a href="dictionary.html" class="col-sm-9 col-md-6 btn btn-outline-dark btn-lg">Аудиословарь
+            <img class="w-75" src="../src/images/ornament.png" alt="Аудиословарь">
+          </a>
         </div>
-
-        <button type='button' class='col-sm-9 col-md-7 btn btn-outline-dark btn-lg'>Аудиословарь
-          <img class='btn-img___2Wdhq' src='../src/images/ornament.png' alt='Аудиословарь'>
-        </button>
       </div>
     </div>
   </div>
