done translation-list. Done card frame (no content)

--- a/src/dictionary.html
+++ b/src/dictionary.html
@@ -56,16 +56,21 @@
   </section>
   <section>
     <h2 class="visually-hidden">Перевод слов</h2>
-    <div class="translation-container">
-      <div class="translation-list">
-        <ul>
-          <li>азбука</li>
-          <li>азбука</li>
-          <li>азбука</li>
+    <div class="row translation-container">
+      <div class="col translation-list">
+        <ul class="list-unstyled fw-normal pb-1 small">
+          <li>
+            <a class="list-group-item list-group-item-action active" href="#">азбука</a>
+          </li>
+          <li>
+            <a class="list-group-item list-group-item-action" href="#">азбука</a>
+          </li>
+          <li>
+            <a class="list-group-item list-group-item-action" href="#">азбука</a>
+          </li>
         </ul>
-
       </div>
-      <div class="translation-card">
+      <div class="col-9 translation-card">
 
       </div>
 
