Done translation card content

--- a/src/dictionary.html
+++ b/src/dictionary.html
@@ -71,6 +71,20 @@
         </ul>
       </div>
       <div class="col-9 translation-card">
+        <div class="card-header">
+          <h3 class="card-title h3">азбука</h3>
+          <div title="Listen to Nivkh pronunciation" class="card-pronounce ms-3" role="button" tabindex="0">
+          </div>
+        </div>
+        <div class="card-translate">
+          <p class="card-lang mark text-uppercase fs-6 lh-lg"><em>ru</em></p>
+          <p class="card-text text-start fs-5 lh-sm">такая книга okwndfi rnigvnrt rgn wrin girj w акая книга okwndfi rnigvnrt rgn wrin girj w
+            o gwirg wprg</p>
+        </div>
+        <div class="card-translate">
+          <p class="card-lang mark text-uppercase fs-6 lh-lg"><em>en</em></p>
+          <p class="card-text text-start fs-5 lh-sm">such a book</p>
+        </div>
 
       </div>
 
