--- a/src/dictionary.html
+++ b/src/dictionary.html
@@ -4,7 +4,7 @@
   <meta charset='UTF-8'>
   <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet'
         integrity='sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6' crossorigin='anonymous'>
-  <link href='css/style.css' rel='stylesheet' crossorigin='anonymous'>
+  <link href='css/style.min.css' rel='stylesheet' crossorigin='anonymous'>
   <link rel='prefetch' href='fonts/ArialBD.woff2' as='font' crossorigin='anonymous'>
   <title>Русско-нивхско-английский словарь</title>
 </head>
