--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link href="css/style.css" rel="stylesheet" crossorigin="anonymous">
+  <link href="css/style.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="prefetch" href="fonts/ArialBD.woff2" as="font" crossorigin="anonymous">
   <title>Информация о словаре</title>
 </head>
@@ -26,7 +26,7 @@
       </nav>
     </header>
     <div class="row">
-      <div class="col-12 col-md-6"><img class="img-fluid" src="../src/images/onboarding_background.jpg" alt="Обложка словаря"></div>
+      <div class="col-12 col-md-6"><img class="img-fluid" src="images/onboarding_background.jpg" alt="Обложка словаря"></div>
       <div class="col-12 col-md-6 text-center">
         <div class="w-100 h-80">
           <ul class="nav nav-tabs">
@@ -39,13 +39,13 @@
           </ul>
           <div class="tab-content">
             <div class="tab-pane active">
-              <img class="img-fluid" src="../src/images/about_text.jpg" alt="Предисловие">
+              <img class="img-fluid" src="images/about_text.jpg" alt="Предисловие">
             </div>
           </div>
       </div>
         <div class="text-center mx-auto my-5">
           <a href="dictionary.html" class="col-sm-9 col-md-6 btn btn-outline-dark btn-lg">Аудиословарь
-            <img class="w-75" src="../src/images/ornament.png" alt="Аудиословарь">
+            <img class="w-75" src="images/ornament.png" alt="Аудиословарь">
           </a>
         </div>
       </div>
