--- a/src/dictionary.html
+++ b/src/dictionary.html
@@ -29,14 +29,11 @@
       <h1 class='visually-hidden'>Поиск по словарю</h1>
       <section>
         <h2 class='visually-hidden'>Форма поиска</h2>
-        <form class="w-50 d-flex search-form d-flex row flex-nowrap justify-content-between align-items-center mx-auto mt-4 mb-4">
-          <select class="form-select w-25" aria-label='Выбрать язык'>
-            <option selected>Нивхский</option>
-            <option value='ru'>Русский</option>
-            <option value='en'>Английский</option>
+        <form class='w-50 d-flex search-form d-flex row flex-nowrap justify-content-between align-items-center mx-auto mt-4 mb-4'>
+          <select id='languages' class='form-select w-25' aria-label='Выбрать язык'>
           </select>
           <div class='w-75 d-flex flex-row flex-nowrap justify-content-between'>
-            <div class="w-100">
+            <div class='w-100'>
               <div class='input-group'>
                 <input type='text' class='form-control ps-3 pe-3 search-input' type='text' placeholder='введите слово'
                        aria-label='поиск'>
@@ -63,7 +60,8 @@
                 </button>
               </div>
             </div>
-            <button class="btn btn-warning d-flex align-items-center align-self-center ms-1 px-3 py-0 rounded-pill" type='submit'>
+            <button class='btn btn-warning d-flex align-items-center align-self-center ms-1 px-3 py-0 rounded-pill'
+                    type='submit'>
               <svg class='search-icon' height='32' version='1.1' viewBox='0 0 32 32' width='32'>
                 <g fill='none' fill-rule='evenodd' id='Page-1' stroke='none' stroke-width='1'>
                   <g class='icon-color' id='icon-111-search'>
@@ -80,39 +78,42 @@
       <section class='container'>
         <div class='row'>
           <h2 class='visually-hidden'>Перевод слов</h2>
-            <div class='col col-3 h-100'>
-              <ul class='list-unstyled fw-normal pb-1 small'>
-                <li>
-                  <a class='list-group-item list-group-item-action active' href='#'>азбука</a>
-                </li>
-                <li>
-                  <a class='list-group-item list-group-item-action' href='#'>азбука</a>
-                </li>
-                <li>
-                  <a class='list-group-item list-group-item-action' href='#'>азбука</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-9">
-              <div class="card shadow">
-                <div>
-                  <h3 class="card-header">азбука</h3>
-                </div>
-                <div class="card-body">
-                  <button title="Listen to Nivkh pronunciation" class="btn btn-outline-secondary btn-sm mb-3">
-                    <svg class="sound-on" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><title/><g data-name="1" id="_1"><path d="M179,388H103.35a49.27,49.27,0,0,1-49.22-49.21V237.21A49.27,49.27,0,0,1,103.35,188H179a15,15,0,0,1,15,15V373A15,15,0,0,1,179,388ZM103.35,218a19.24,19.24,0,0,0-19.22,19.21V338.79A19.24,19.24,0,0,0,103.35,358H164V218Z"/><path d="M295,452.92H245.62A81.71,81.71,0,0,1,164,371.3V204.7a81.71,81.71,0,0,1,81.62-81.62H295a15,15,0,0,1,15,15V437.92A15,15,0,0,1,295,452.92ZM245.62,153.08A51.68,51.68,0,0,0,194,204.7V371.3a51.68,51.68,0,0,0,51.62,51.62H280V153.08Z"/><path d="M358.57,351.57A15,15,0,0,1,348,326,53.73,53.73,0,0,0,348,250a15,15,0,0,1,21.22-21.22,83.79,83.79,0,0,1,0,118.36A15,15,0,0,1,358.57,351.57Z"/><path d="M404.5,397.5a15,15,0,0,1-10.61-25.61,118.77,118.77,0,0,0,0-167.78,15,15,0,0,1,21.22-21.22c57.95,58,57.95,152.26,0,210.22A15,15,0,0,1,404.5,397.5Z"/></g></svg>
-                  </button>
-                  <h4 class="card-title">ru</h4>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <h4 class="card-title">en</h4>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <div id='words-list-container' class='col col-3 h-100'>
+            <ul class='list-unstyled fw-normal pb-1 small'>
+            </ul>
+          </div>
+          <div class='col-9'>
+            <div class='card shadow'>
+              <div>
+                <h3 class='card-header'>азбука</h3>
+              </div>
+              <div class='card-body'>
+                <button title='Listen to Nivkh pronunciation' class='btn btn-outline-secondary btn-sm mb-3'>
+                  <svg class='sound-on' viewBox='0 0 512 512' xmlns='http://www.w3.org/2000/svg'><title />
+                    <g data-name='1' id='_1'>
+                      <path
+                        d='M179,388H103.35a49.27,49.27,0,0,1-49.22-49.21V237.21A49.27,49.27,0,0,1,103.35,188H179a15,15,0,0,1,15,15V373A15,15,0,0,1,179,388ZM103.35,218a19.24,19.24,0,0,0-19.22,19.21V338.79A19.24,19.24,0,0,0,103.35,358H164V218Z' />
+                      <path
+                        d='M295,452.92H245.62A81.71,81.71,0,0,1,164,371.3V204.7a81.71,81.71,0,0,1,81.62-81.62H295a15,15,0,0,1,15,15V437.92A15,15,0,0,1,295,452.92ZM245.62,153.08A51.68,51.68,0,0,0,194,204.7V371.3a51.68,51.68,0,0,0,51.62,51.62H280V153.08Z' />
+                      <path
+                        d='M358.57,351.57A15,15,0,0,1,348,326,53.73,53.73,0,0,0,348,250a15,15,0,0,1,21.22-21.22,83.79,83.79,0,0,1,0,118.36A15,15,0,0,1,358.57,351.57Z' />
+                      <path
+                        d='M404.5,397.5a15,15,0,0,1-10.61-25.61,118.77,118.77,0,0,0,0-167.78,15,15,0,0,1,21.22-21.22c57.95,58,57.95,152.26,0,210.22A15,15,0,0,1,404.5,397.5Z' />
+                    </g>
+                  </svg>
+                </button>
+                <h4 class='card-title'>ru</h4>
+                <p class='card-text'>With supporting text below as a natural lead-in to additional content.</p>
+                <h4 class='card-title'>en</h4>
+                <p class='card-text'>With supporting text below as a natural lead-in to additional content.</p>
               </div>
             </div>
-            </div>
+          </div>
         </div>
       </section>
     </main>
   </div>
 </div>
+<script src='js/main.js' type='text/javascript'></script>
 </body>
 </html>
