Render word card

--- a/src/dictionary.html
+++ b/src/dictionary.html
@@ -75,10 +75,10 @@
           <div class='col-9'>
             <div class='card shadow'>
               <div>
-                <h3 class='card-header'>азбука</h3>
+                <h3 class='card-header'></h3>
               </div>
               <div class='card-body'>
-                <button title='Listen to Nivkh pronunciation' class='btn btn-outline-secondary btn-sm mb-3'>
+                <button id='play-word-btn' title='Listen to Nivkh pronunciation' class='btn btn-outline-secondary btn-sm mb-3'>
                   <svg class='sound-on' viewBox='0 0 512 512' xmlns='http://www.w3.org/2000/svg'><title />
                     <g data-name='1' id='_1'>
                       <path
@@ -92,10 +92,6 @@
                     </g>
                   </svg>
                 </button>
-                <h4 class='card-title'>ru</h4>
-                <p class='card-text'>With supporting text below as a natural lead-in to additional content.</p>
-                <h4 class='card-title'>en</h4>
-                <p class='card-text'>With supporting text below as a natural lead-in to additional content.</p>
               </div>
             </div>
           </div>
