--- a/src/index.html
+++ b/src/index.html
@@ -31,16 +31,19 @@
       <div class='col-12 col-md-6 text-center'>
         <div class='w-100 h-80'>
           <ul class='nav nav-tabs'>
-            <li class='nav-item'>
-              <a class='nav-link active' aria-current='page' href='#'>Предисловие</a>
+            <li id='about-button' class='nav-item'>
+              <a class='nav-link active' href='#'>Предисловие</a>
             </li>
-            <li class='nav-item'>
+            <li id='get-started-button' class='nav-item'>
               <a class='nav-link' href='#'>Как использовать</a>
             </li>
           </ul>
           <div class='tab-content'>
-            <div class='tab-pane active'>
+            <div id='about' class='tab-pane active'>
               <img class='img-fluid' src='images/about_text.jpg' alt='Предисловие'>
+            </div>
+            <div id='get-started'  class='tab-pane'>
+              <img class='img-fluid' src='images/onboarding_text.jpg' alt='Как использовать'>
             </div>
           </div>
         </div>
@@ -53,5 +56,6 @@
     </div>
   </div>
 </div>
+<script src='js/main.js' type='text/javascript'></script>
 </body>
 </html>
