--- a/src/dictionary.html
+++ b/src/dictionary.html
@@ -40,24 +40,9 @@
                        placeholder='введите слово'
                        aria-label='поиск'>
                 <button id='search-clear-btn' class='btn btn-outline-primary border-start-0 reset-btn' type='button'>
-                  <svg version='1.1' id='Capa_1' x='0' y='0' width='15' height='15' viewBox='0 0 496.096 496.096'
-                       style='enable-background:new 0 0 496.096 496.096;' xml:space='preserve'>
-                    <g><g><path d='M259.41,247.998L493.754,13.654c3.123-3.124,3.123-8.188,0-11.312c-3.124-3.123-8.188-3.123-11.312,0L248.098,236.686 L13.754,2.342C10.576-0.727,5.512-0.639,2.442,2.539c-2.994,3.1-2.994,8.015,0,11.115l234.344,234.344L2.442,482.342 c-3.178,3.07-3.266,8.134-0.196,11.312s8.134,3.266,11.312,0.196c0.067-0.064,0.132-0.13,0.196-0.196L248.098,259.31 l234.344,234.344c3.178,3.07,8.242,2.982,11.312-0.196c2.995-3.1,2.995-8.016,0-11.116L259.41,247.998z'/></g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
-                    <g></g>
+                  <svg xmlns='http://www.w3.org/2000/svg' viewBox='-6 -6 24 24' width='24' fill='currentColor'>
+                    <path
+                      d='M7.314 5.9l3.535-3.536A1 1 0 1 0 9.435.95L5.899 4.485 2.364.95A1 1 0 1 0 .95 2.364l3.535 3.535L.95 9.435a1 1 0 1 0 1.414 1.414l3.535-3.535 3.536 3.535a1 1 0 1 0 1.414-1.414L7.314 5.899z'></path>
                   </svg>
                 </button>
               </div>
@@ -78,18 +63,11 @@
                 <h3 class='card-header'></h3>
               </div>
               <div class='card-body'>
-                <button id='play-word-btn' title='Listen to Nivkh pronunciation' class='btn btn-outline-secondary btn-sm mb-3'>
-                  <svg class='sound-on' viewBox='0 0 512 512' xmlns='http://www.w3.org/2000/svg'><title />
-                    <g data-name='1' id='_1'>
-                      <path
-                        d='M179,388H103.35a49.27,49.27,0,0,1-49.22-49.21V237.21A49.27,49.27,0,0,1,103.35,188H179a15,15,0,0,1,15,15V373A15,15,0,0,1,179,388ZM103.35,218a19.24,19.24,0,0,0-19.22,19.21V338.79A19.24,19.24,0,0,0,103.35,358H164V218Z' />
-                      <path
-                        d='M295,452.92H245.62A81.71,81.71,0,0,1,164,371.3V204.7a81.71,81.71,0,0,1,81.62-81.62H295a15,15,0,0,1,15,15V437.92A15,15,0,0,1,295,452.92ZM245.62,153.08A51.68,51.68,0,0,0,194,204.7V371.3a51.68,51.68,0,0,0,51.62,51.62H280V153.08Z' />
-                      <path
-                        d='M358.57,351.57A15,15,0,0,1,348,326,53.73,53.73,0,0,0,348,250a15,15,0,0,1,21.22-21.22,83.79,83.79,0,0,1,0,118.36A15,15,0,0,1,358.57,351.57Z' />
-                      <path
-                        d='M404.5,397.5a15,15,0,0,1-10.61-25.61,118.77,118.77,0,0,0,0-167.78,15,15,0,0,1,21.22-21.22c57.95,58,57.95,152.26,0,210.22A15,15,0,0,1,404.5,397.5Z' />
-                    </g>
+                <button id='play-word-btn' title='Listen to Nivkh pronunciation'
+                        class='btn btn-outline-secondary btn-sm mb-3'>
+                  <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 -3 24 24' width='24' fill='currentColor'>
+                    <path
+                      d='M12 2h-.6a2 2 0 0 0-1.444.617L6.239 6.5H2v5h4.239l3.717 3.883A2 2 0 0 0 11.4 16H12V2zM5.385 4.5L8.51 1.234A4 4 0 0 1 11.401 0H13a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1h-1.6a4 4 0 0 1-2.889-1.234L5.385 13.5H2a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h3.385zM16 7a1 1 0 0 1 0-2 4 4 0 1 1 0 8 1 1 0 0 1 0-2 2 2 0 1 0 0-4zm0-4a1 1 0 0 1 0-2 8 8 0 1 1 0 16 1 1 0 0 1 0-2 6 6 0 1 0 0-12z'></path>
                   </svg>
                 </button>
               </div>
