--- a/src/dictionary.html
+++ b/src/dictionary.html
@@ -16,7 +16,7 @@
         <div class='collapse navbar-collapse'>
           <ul class='navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll'>
             <li class='nav-item col-6 col-md-auto menu-item'>
-              <a class='nav-link p-2' href='index.html' title='На главную'>На главную</a>
+              <a class='nav-link p-2' href='index.html' title='О словаре'>Введение</a>
             </li>
             <li class='nav-item col-6 col-md-auto menu-item menu-item--active'>
               <a class='nav-link p-2 active ' href='#' aria-current='page' title='Словарь'>Словарь</a>
