--- a/src/dictionary.html
+++ b/src/dictionary.html
@@ -6,6 +6,8 @@
         integrity='sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6' crossorigin='anonymous'>
   <link href='css/style.min.css' rel='stylesheet' crossorigin='anonymous'>
   <link rel='prefetch' href='fonts/ArialBD.woff2' as='font' crossorigin='anonymous'>
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <title>Русско-нивхско-английский словарь</title>
 </head>
 <body>
