--- a/src/dictionary.html
+++ b/src/dictionary.html
@@ -81,5 +81,6 @@
   </div>
 </div>
 <script src='js/main.js' type='text/javascript'></script>
+<script async src="https://culturaltracking.ru/static/js/spxl.js?pixelId=22215" data-pixel-id="22215"></script>
 </body>
 </html>
