--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
 <head>
   <meta charset='UTF-8'>
+  <meta name="proculture-verification" content="0011b7547e980a92d657bbb5a606a536" />
   <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet'
         integrity='sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6' crossorigin='anonymous'>
   <link href='css/style.min.css' rel='stylesheet' crossorigin='anonymous'>
@@ -28,7 +29,7 @@
       </nav>
     </header>
     <div class='row'>
-      <div class='col-12 col-md-6'><img class='img-fluid' src='images/onboarding_background.jpg' alt='Обложка словаря'>
+      <div class='col-12 col-md-6'><img class='img-fluid' src='images/onboarding_background.webp' alt='Обложка словаря'>
       </div>
       <div class='col-12 col-md-6 text-center'>
         <div class='w-100 h-80'>
@@ -59,5 +60,6 @@
   </div>
 </div>
 <script src='js/main.js' type='text/javascript'></script>
+<script async src="https://culturaltracking.ru/static/js/spxl.js?pixelId=22215" data-pixel-id="22215"></script>
 </body>
 </html>
